tests/ui/errors/snapshots/parse_missing_closing_brace.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unclosed block
   ╭─[test.lis:2:11]
 1 │ 
 2 │ fn main() {
   ·           ┬
   ·           ╰── opening brace here
 3 │   let x = 42;
   ╰────
  help: Add a closing `}` · code: [parse.unclosed_block]
