tests/ui/errors/snapshots/parse_missing_comma_before_pub_field_reports.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:10]
 2 │ struct S {
 3 │   a: int pub b: int,
   ·          ─┬─
   ·           ╰── expected `,` or `}`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
