tests/ui/errors/snapshots/parse_missing_param_colon_recovers_annotation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:8]
 1 │ 
 2 │ fn f(x int) -> int {
   ·        ─┬─
   ·         ╰── expected `:`
 3 │   x
   ╰────
  code: [parse.unexpected_token]
