tests/ui/errors/snapshots/parse_missing_param_colon_reports_once.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:8]
 1 │ 
 2 │ fn id(x) {
   ·        ┬
   ·        ╰── expected `:`
 3 │   x
   ╰────
  code: [parse.unexpected_token]
