tests/ui/errors/snapshots/parse_missing_struct_field_colon_reports_once.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:8]
 2 │ struct User {
 3 │   name string,
   ·        ───┬──
   ·           ╰── expected `:`
 4 │   age: int,
   ╰────
  code: [parse.unexpected_token]
