tests/ui/errors/snapshots/parse_missing_variant_field_colon_reports_once.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:16]
 2 │ enum Shape {
 3 │   Rect { width float64, height: float64 },
   ·                ───┬───
   ·                   ╰── expected `:`
 4 │ }
   ╰────
  help:  · code: [parse.unexpected_token]
