tests/ui/errors/snapshots/parse_negative_pattern_below_i64_min.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:5]
 3 │   match x {
 4 │     -9223372036854775809 => "low",
   ·     ──────────┬─────────
   ·               ╰── negative integer out of range
 5 │     _ => "other",
   ╰────
  help: Negative integer must be ≥ -9223372036854775808 (i64 minimum) · code: [parse.syntax_error]
