tests/ui/errors/snapshots/parse_nested_or_pattern_in_parens.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid or-pattern
   ╭─[test.lis:4:11]
 3 │   match opt {
 4 │     Some((1 | 2)) => 1,
   ·           ──┬──
   ·             ╰── or-pattern not allowed here
 5 │     _ => 0,
   ╰────
  help: Use `Ok(x) | Ok(y)` instead of `Ok(x | y)` · code: [parse.nested_or_pattern]
